# distill

./: .gitignore  Cargo.toml  README.md  Rustfmt.toml  build.rs  data_capnp.rs  deny.toml  rustfmt.toml  service_capnp.rs
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: lib.rs  macros.rs  main.rs  shell.rs
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/asset-uuid/: Cargo.toml
core/asset-uuid/src/: lib.rs
core/src/: distill_signal.rs  importer_context.rs  lib.rs  utils.rs
core/tests/: uuid.rs
daemon/: Cargo.toml
daemon/examples/: daemon.rs
daemon/src/: artifact_cache.rs  asset_hub.rs  asset_hub_service.rs  builder.rs  capnp_db.rs  daemon.rs  error.rs  extension_map.rs  file_asset_source.rs  file_tracker.rs  lib.rs  main.rs  scope.rs  serialized_asset.rs  source_pair_import.rs  timeout.rs  utils.rs  watcher.rs  websocket_async_io.rs
docs/: rfc.md  source_overview.md
docs/graphics/: build.dot  import.dot  overview.dot  pipeline_example.dot  processing_example_meshopt.dot  processing_example_spritesheet.dot
docs/graphics/ux/: pipeline_ux_meshopt.dot  pipeline_ux_spritesheet_gen_with_list.dot  pipeline_ux_tex_combine.dot  pipeline_ux_tex_srgb_simple.dot
docs/rfc/: assetid.md  overview.md
examples/daemon_with_loader/: Cargo.toml  daemon.rs  game.rs  image.rs  main.rs
examples/daemon_with_loader/src/: daemon.rs  game.rs  image.rs  main.rs
examples/handle_integration/: Cargo.toml  custom_asset.rs  daemon.rs  game.rs  image.rs  main.rs  storage.rs
examples/handle_integration/assets/: custom_asset.ron
examples/handle_integration/src/: custom_asset.rs  daemon.rs  game.rs  image.rs  main.rs  storage.rs
importer/: Cargo.toml
importer/serde-importable-derive/: Cargo.toml
importer/serde-importable-derive/src/: lib.rs
importer/src/: amethyst_formats.rs  boxed_importer.rs  error.rs  lib.rs  ron_importer.rs  serde_obj.rs  serialized_asset.rs
loader/: Cargo.toml
loader/src/: asset_data.rs  handle.rs  io.rs  lib.rs  loader.rs  packfile_io.rs  rpc_io.rs  rpc_loader.rs  rpc_state.rs  storage.rs  task_local.rs
loader/tests/assets/: asset_a.txt  asset_c.txt
processing/: Cargo.toml
processing/src/: graph.rs  lib.rs  processor.rs
schema/: Cargo.toml  build.rs  data.capnp  service.capnp
schema/schema-gen/: Cargo.toml
schema/schema-gen/src/: main.rs
schema/schemas/: data.capnp  pack.capnp  service.capnp
schema/src/: lib.rs
schema/src/schemas/: data_capnp.rs  mod.rs  pack_capnp.rs  service_capnp.rs
src/: asset_daemon.rs  asset_hub.rs  asset_hub_service.rs  asset_import.rs  capnp_db.rs  error.rs  file_asset_source.rs  file_error.rs  file_service.rs  file_tracker.rs  lib.rs  main.rs  processing.rs  serialized_asset.rs  utils.rs  watcher.rs
tests/assets/: asset_a.txt  asset_b.txt
