[package]
name = "atelier-assets"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
description = "\"Offline\" asset processing and indexing for game engines"
exclude = ["examples/*"]
keywords = ["game", "engine", "assets", "loading", "processing", "indexing"]
categories = ["game-engines"]

repository = "https://github.com/amethyst/atelier-assets"

readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "importer",
    "loader",
    "schema",
    "client",
    "cli",
    "daemon",
    "core",
    "examples/daemon_with_loader",
    "examples/handle_integration",
]

[dependencies]
atelier-core = { version = "0.1", path = "core" }
atelier-daemon = { version = "0.1", path = "daemon" }
atelier-importer = { version = "0.1", path = "importer" }
atelier-loader = { version = "0.1", path = "loader" }

[dev-dependencies]
futures-core = "0.3.9"
futures-io = "0.3.9"
futures-util = "0.3.9"
serde = "1.0.118"
uuid = "0.8.2"
tokio = { version = "0.2", features = ["sync"] }
serial_test = "0.5.1"


[features]
serde-1 = ["atelier-core/serde"]
type_uuid = ["atelier-core/type_uuid"]
serde_importers = ["atelier-importer/serde_importers"]
parallel_hash = ["atelier-daemon/parallel_hash"]
pretty_log = ["atelier-daemon/pretty_log"]
rpc_io = ["atelier-loader/rpc_io"]
packfile_io = ["atelier-loader/packfile_io"]
handle = ["atelier-loader/handle"]
