[package]
name = "distill"
version = "0.0.1"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
description = "\"Offline\" asset processing and indexing for game engines"
exclude = ["examples/*"]
keywords = ["game", "engine", "assets", "loading", "processing", "indexing"]
categories = ["game-engines"]

repository = "https://github.com/amethyst/distill"

readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "importer",
    "loader",
    "schema",
    "client",
    "cli",
    "daemon",
    "core",
    "examples/daemon_with_loader",
    "examples/handle_integration",
]

[dependencies]
distill-core = { version = "0.0.1", path = "core" }
distill-daemon = { version = "0.0.1", path = "daemon" }
distill-importer = { version = "0.0.1", path = "importer" }
distill-loader = { version = "0.0.1", path = "loader" }

[dev-dependencies]
futures = "0.3"
serde = "1"
uuid = "0.8.2"
tokio = { version = "1.0", features = ["sync"] }
serial_test = "0.5.1"


[features]
serde-1 = ["distill-core/serde"]
type_uuid = ["distill-core/type_uuid"]
serde_importers = ["distill-importer/serde_importers"]
parallel_hash = ["distill-daemon/parallel_hash"]
pretty_log = ["distill-daemon/pretty_log"]
rpc_io = ["distill-loader/rpc_io"]
packfile_io = ["distill-loader/packfile_io"]
handle = ["distill-loader/handle"]
