[package]
name = "distill-cli"
version = "0.0.2"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "CLI component of `distill`."
publish = false

[dependencies]
capnp = "0.14.0"
capnp-rpc = "0.14.0"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
distill-schema = { version = "0.0.3", path = "../schema" }
uuid = "0.8.2"
async-trait = "0.1.22"
crossterm = { version = "0.17", features = ["event-stream"] }
defer = "0.1.0"
async-io = "1.4.1"
async-net = "1.6.0"
async-executor = "1.4.1"