[package]
name = "distill-cli"
version = "0.0.3"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "CLI component of `distill`."
publish = false

[dependencies]
distill-schema = { version = "=0.0.3", path = "../schema" }

capnp = "0.14.0"
capnp-rpc = "0.14.0"
tokio = { version = "1.2", features = ["io-std", "rt", "rt-multi-thread", "net", "io-util"] }
tokio-util = { version = "0.6.1", features = ["codec", "compat"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
uuid = "0.8.2"
async-trait = "0.1.22"
crossterm = { version = "0.17", features = ["event-stream"] }
defer = "0.1.0"
tokio-stream = { version = "0.1.2", features = ["io-util"] }
