[package]
name = "atelier-client"
version = "0.1.0"
edition = "2018"

[dependencies]
atelier-core = { path = "../core" }
capnp = "0.12"
capnp-rpc = "0.12"
tokio = "0.2"
futures = "0.3"
atelier-schema = { path = "../schema" }
futures-tokio-compat = { git = "https://github.com/dwrensha/futures-tokio-compat", branch = "tokio-0.2", optional = true }