[package]
name = "atelier-client"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
capnp = "0.14"
capnp-rpc = "0.14"
tokio = "0.2"
tokio-util = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3.9", default-features = false }
atelier-schema = { path = "../schema" }
