[package]
name = "atelier-core"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
serde-1 = ["serde"]
type_uuid = ["type-uuid"]
path_utils = ["dunce", "path-clean", "path-slash"]

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.118", optional = true, features = ["derive"] }
futures-core = { version = "0.3.9", default-features = false, features = ["alloc"] }
type-uuid = { version = "0.1.2", optional = true, default-features = false }
dunce = { version = "1.0", optional = true }
path-clean = { version = "0.1", optional = true }
path-slash = { version = "0.1.1", optional = true }

[dev-dependencies]
type-uuid = "0.1.2"
serde_json = "1.0"
bincode = "1.3.1"
