[package]
name = "atelier-daemon"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
atelier-core = { path = "../core", version = "0.1.0", features = ["path_utils"] }
atelier-schema = { path = "../schema", version = "0.1.0" }
atelier-importer = { path = "../importer", version = "0.1.0" }
atelier-loader = { path = "../loader", version = "0.1.0" }
dunce = "1.0"
path-clean = "0.1"
path-slash = "0.1.1"
capnp = { version = "0.14.0", features = ["unaligned"] }
capnp-rpc = "0.14.0"
notify = "4.0.15"
lmdb-rkv = "0.14"
rayon = { version = "1.3", optional = true }
log = { version = "0.4", features = ["serde", "std"] }
tokio = { version = "1.0", features = [
    "net",
    "fs",
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
] }
tokio-util = { version = "0.6.1", features = ["compat"] }
futures = "0.3"
async-lock = { version = "2.1" }
async-channel = { version = "1.4" }
event-listener = { version = "2.4.0" }
serde = "1"
serde_derive = "1.0"
erased-serde = "0.3"
bincode = "1.3.1"
ron = "0.6.4"
num_cpus = "1.10"
fern = { version = "0.6.0", optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["clock"], optional = true }
pin-project = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tempfile = "3.2.0"

[features]
parallel_hash = ["rayon"]
pretty_log = ["chrono", "fern"]
