[package]
name = "distill-daemon"
version = "0.0.3"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Daemon component of the asset pipeline `distill`."

[dependencies]
distill-core = { path = "../core", version = "=0.0.3", features = ["path_utils"] }
distill-schema = { path = "../schema", version = "=0.0.3" }
distill-importer = { path = "../importer", version = "=0.0.3" }
distill-loader = { path = "../loader", version = "=0.0.3" }
dunce = "1.0"
path-clean = "0.1"
path-slash = "0.1.1"
capnp = { version = "0.14.0", features = ["unaligned"] }
capnp-rpc = "0.14.0"
notify = "4.0.15"
distill-downstream-lmdb-rkv = "0.11.0-windows-fix"
rayon = { version = "1.3", optional = true }
log = { version = "0.4", features = ["serde", "std"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
event-listener = { version = "2.4.0" }
serde = "1"
serde_derive = "1.0"
erased-serde = "0.3"
bincode = "1.3.1"
ron = "0.6.4"
num_cpus = "1.10"
fern = { version = "0.6.0", optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["clock"], optional = true }
pin-project = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }
async-io = "1.4.1"
async-executor = "1.4.1"
async-net = "1.6.0"
async-fs = "1.5.0"
async-lock = { version = "2.1" }
async-channel = { version = "1.4" }
bevy_tasks = "0.5.0"

[dev-dependencies]
tempfile = "3.2.0"
futures-test = "0.3.15"
# used for timeout, which was vendored from async_std. It is only used in tests
pin-project-lite = "0.2.6"

[features]
parallel_hash = ["rayon"]
pretty_log = ["chrono", "fern"]
