[package]
name = "atelier-importer"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
atelier-core = { path = "../core", version = "0.1.0", features = ["serde-1"] }
uuid = { version = "0.8.2", features = ["v4"] }
serde = "1.0.118"
erased-serde = "0.3"
ron = { version = "0.6.4", optional = true }
typetag = { version = "0.1", optional = true }
serde-importable-derive = { path = "./serde-importable-derive", version = "0.1.0", optional = true }
futures = { version = "0.3.9" }
log = { version = "0.4.11", features = ["serde"] }

[features]
serde_importers = [
    "typetag",
    "serde-importable-derive",
    "ron",
    "atelier-core/type_uuid",
]
