[package]
name = "distill-importer"
version = "0.0.3"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Importer component of the asset pipeline `distill`."

[dependencies]
distill-core = { path = "../core", version = "=0.0.3", features = ["serde-1"] }
distill-serde-importable-derive = { path = "./serde-importable-derive", version = "=0.0.3", optional = true }

uuid = { version = "0.8.2", features = ["v4"] }
serde = "1"
erased-serde = "0.3"
ron = { version = "0.6.4", optional = true }
typetag = { version = "0.1", optional = true }
futures = "0.3"
log = { version = "0.4", features = ["serde"] }

[features]
serde_importers = [
    "typetag",
    "distill-serde-importable-derive",
    "ron",
    "distill-core/type_uuid",
]
wasm-bindgen = [
    "uuid/wasm-bindgen"
]
