[package]
name = "distill-loader"
version = "0.0.3"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Loader component of the asset pipeline `distill`."

[dependencies]
distill-core = { path = "../core", version = "=0.0.3", features = ["serde-1"] }
distill-schema = { path = "../schema", version = "=0.0.3", optional = true }

crossbeam-channel = "0.5.0"
tokio = { version = "1.2", features = ["sync", "rt", "rt-multi-thread"], optional = true }
tokio-util = { version = "0.6.1", features = ["compat"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["io"], optional = true }
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
capnp = { version = "0.14.0", optional = true }
capnp-rpc = { version = "0.14.0", optional = true }
log = "0.4"
dashmap = "4.0.1"
serde = { version = "1", features = ["derive"], optional = true }
uuid = { version = "0.8.2", optional = true }
thread_local = { version = "1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = { version = "0.7", optional = true }
instant = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[features]
default = []
packfile_io = [
    "distill-schema",
    "tokio",
    "capnp",
    "capnp-rpc",
    "tokio-util",
    "futures-util",
    "memmap",
    "thread_local",
    "invalidate_path"
]
rpc_io = [
    "distill-schema",
    "tokio",
    "capnp",
    "capnp-rpc",
    "futures-util",
    "invalidate_path",
    "tokio/net"
]
invalidate_path = ["distill-core/path_utils"]
handle = ["serde", "uuid"]
