[package]
name = "distill-loader"
version = "0.0.3"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Loader component of the asset pipeline `distill`."

[dependencies]
distill-core = { path = "../core", version = "=0.0.3", features = ["serde-1"] }
distill-schema = { path = "../schema", version = "=0.0.3", optional = true }

crossbeam-channel = "0.5.0"
futures-util = { version = "0.3", default-features = false, features = ["io"], optional = true }
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
capnp = { version = "0.14.0", features = ["unaligned"], optional = true }
capnp-rpc = { version = "0.14.0", optional = true }
log = "0.4"
dashmap = "4.0.1"
serde = { version = "1", features = ["derive"], optional = true }
uuid = { version = "0.8.2", optional = true }
thread_local = { version = "1.0", optional = true }
async-io = { version = "1.4.1", optional = true }
async-executor = { version = "1.4.1", optional = true }
async-net = { version = "1.6.0", optional = true }
bevy_tasks = { version = "0.5.0", optional = true }
pin-project-lite = "0.2.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = { version = "0.7", optional = true }
instant = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[features]
default = []
packfile_io = [
    "distill-schema",
    "capnp",
    "capnp-rpc",
    "futures-util",
    "memmap",
    "thread_local",
    "async-executor",
    "bevy_tasks",
    "invalidate_path"
]
rpc_io = [
    "distill-schema",
    "capnp",
    "capnp-rpc",
    "futures-util",
    "invalidate_path",
    "async-io",
    "async-executor",
    "async-net"
]
invalidate_path = ["distill-core/path_utils"]
handle = ["serde", "uuid"]
