[package]
name = "processing"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
downcast = "0.10"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
erased-serde = "0.3"
petgraph = "0.4.13"
