[package]
name = "distill-schema"
version = "0.0.3"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "RPC schema definitions for the asset pipeline `distill`."

[dependencies]
distill-core = { path = "../core", version = "=0.0.3" }

capnp = "0.14.0"
