[package]
name = "handle_integration"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
atelier-assets = { version = "0.1", path = "../..", features = ["serde_importers", "asset_uuid_macro", "pretty_log"]}
futures-executor = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["io-util"] }

type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
log = { version = "0.4", features = ["serde"] }
serde = "1"
uuid = "0.8"
bincode = "1.3"
