[package]
name = "distill-serde-importable-derive"
version = "0.0.2"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Proc macro for SerdeImportables in `distill`."

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.58", features = ["derive"] }
quote = "1.0.8"
